# GSYFluid

./: .gitignore  CMakeLists.txt  README.md  compile.sh
analysis/: analysis.ipynb  blocking_analysis.ipynb
data/: blocking_visualization.ipynb  vis.ipynb
example/: CMakeLists.txt  device_prop.cu  mix_block_stream_core.cuh  stream_mixblk_compress.cu
scripts/: state_initialization.ipynb
src/: CMakeLists.txt  multi_dev_main.cpp  single_dev_expt_main.cpp
src/basic/: config.hpp  cu_exception.cuh  logger.cpp  logger.hpp  thread_pool.cpp  thread_pool.hpp  vec3.hpp  velocity_set.hpp
src/lbm_core/: device_function.hpp
src/simulator/: CMakeLists.txt
src/simulator/mix_block/: CMakeLists.txt  kernel.cu  kernel.cuh  l2swapBuf.hpp  simulator.cu  simulator.hpp
src/simulator/multi_dev/: CMakeLists.txt  kernel.cu  kernel.cuh  simulator.cu  simulator.hpp
src/simulator/single_dev_expt/: CMakeLists.txt  L1L2StreamCore.cuh  kernel.cu  kernel.cuh  local_config.hpp  simulator_expt_platform.cu  simulator_expt_platform.hpp
vis/: vis.ipynb
visualization/: dump_visualization.ipynb  multi_dev_blocking.html  single_dev_blocking.html
